New Actor Types
- Actor have type (SHAPE, TEXT)
- Created test menu

--- a/cppsnake2d/cppsnake2d.vcxproj
+++ b/cppsnake2d/cppsnake2d.vcxproj
@@ -129,18 +129,24 @@
   <ItemGroup>
     <ClCompile Include="AActor.cpp" />
     <ClCompile Include="AScene.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="IScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MenuButton.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AActor.h" />
     <ClInclude Include="AScene.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="IScene.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuButton.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
